# pstld

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  benchmark.cpp
include/pstld/: hack_into_std.h  pstld.h
pstld/: pstld.cpp  pstld.h
src/: pstld.cpp
test/: CMakeLists.txt
test-llvm-pstl/: CMakeLists.txt  bootstrap.sh  helpers.h  is_sorted.patch  transform_binary.pass.cpp.patch  uninitialized_fill_destroy.pass.cpp.patch  utils.patch
test-msvc-stl/: CMakeLists.txt  bootstrap.sh  parallel_algorithms_reduce.patch  parallel_algorithms_transform_reduce.patch  stable_sort.patch  transform_exclusive_scan.patch
test/defines_feature_test_macros/: CMakeLists.txt  test.cpp
test/linked_mixed/: CMakeLists.txt  f.cpp  g.mm
test/linked_objc/: CMakeLists.txt  test.mm
test/linked_objcpp_arc/: CMakeLists.txt
test/linked_objcpp_noarc/: CMakeLists.txt
test/single_header/: CMakeLists.txt  test.cpp
test/single_header_cpp/: CMakeLists.txt  f.cpp  f.h
test/single_header_mixed/: CMakeLists.txt  f.cpp  g.mm  test.cpp
test/single_header_objcpp_arc/: CMakeLists.txt  test.mm
test/single_header_objcpp_noarc/: CMakeLists.txt  f.h
test/works_with_objc_types/: CMakeLists.txt  test.mm
